<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/baseline_home_24"
        android:title="Dashboard"/>
    <item
        android:id="@+id/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="Cart"/>
    <item
        android:id="@+id/history"
        android:icon="@drawable/baseline_history_24"
        android:title="History"/>

    <item
        android:id="@+id/smart"
        android:icon="@drawable/baseline_maps_home_work_24"
        android:title="Smart"/>

    <item
        android:id="@+id/activity"
        android:icon="@drawable/baseline_low_priority_24"
        android:title="Activity"/>

</menu>