<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />
    <RelativeLayout
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:text="$898098"
            android:textSize="16sp"
            />
    </RelativeLayout>
</RelativeLayout>